# place-update-handler

./: pyproject.toml  template.yaml
scripts/: output_lambda_requirements  poll-message
scripts/samples/: message_sample_1.json  message_sample_2.json  place_data_1.json  place_data_2.json
src/: main.py  requirements.txt
src/place_update_handler/: models.py  settings.py  storages.py
