[tool.poetry]
name = "place-update-handler"
version = "0.1.0"
description = "Lambda function to process messages from an incoming SQS queue and persist it in some storage"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "GPL3"
packages = [
    { include = "place_update_handler", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.15"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
aws-lambda-powertools = "^1.22.0"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.10.1"
tryceratops = "^1.0.0"
pre-commit = "^2.15.0"
boto3-stubs = "^1.20.15"
rich = "^10.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest"]

[mypy]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
